--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <img class="d-block mx-auto rounded" src="assets/img/26994143_905172242941161_3813528505529982961_n.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="">'NOESIS' by the ICT society of Musaeus College</h1>
+              <h1 class="">'NOESIS' by the ICT society of Nalanda College</h1>
             </div>
           </div>
           <p class="lead">Ananda College ICT Society won the 1 st place "NOESIS" which was organized by the ICT society of Nalanda College </p>
