--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
           </div>
           <p class="lead">
-            <br>Thenuka Thathsara,
+            Thenuka Thathsara,
             <br>&nbsp;a member of the ACICTS won the Gold Award in APICTA which was held in Dhaka </p>
         </div>
       </div>
