--- a/index.html
+++ b/index.html
@@ -166,13 +166,7 @@
   <div class="py-5 bg-dark text-center section-fade-in-out" style="background-image: url('assets/img/ac 3.jpg');background-size:cover;background-position:center center;" id="achievements">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h3 class="display-4 text-center border animate-in-down border-info">Achievements</h3>
-          <p class="lead text-center">Ananda College ICT Society has won many achievements in the course of its history. Some of the recent ones are down below</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 p-4 animate-in-down">
+        <div class="col-md-4 p-4 animate-in-down" >
           <img class="d-block mx-auto rounded" src="assets/img/26994143_905172242941161_3813528505529982961_n.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
@@ -195,12 +189,30 @@
           <div class="row">
             <div class="col-md-12">
               <h1>
-                <br>APICTA Gold Award&nbsp;</h1>
+                <br>APICTA Gold award&nbsp;</h1>
             </div>
           </div>
           <p class="lead">
             <br>Thenuka Thathsara,
             <br>&nbsp;a member of the ACICTS won the Gold Award in APICTA which was held in Dhaka </p>
+        </div>
+        <div class="col-md-4 p-4 animate-in-down ml-auto">
+          <img class="d-block mx-auto rounded" src="assets/img/efarmoges.jpg" width="200" height="200">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="">'EFARMOGES 17' by the SBVICTS</h1>
+            </div>
+          </div>
+          <p class="lead">ACICTS won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Samudradevi Balika Vidyalaya</p>
+        </div>
+        <div class="col-md-4 p-4 animate-in-down mr-auto">
+          <img class="d-block rounded mx-auto" src="assets/img/ubiquitous.webp" width="200" height="200">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="">'Ubiquitous' by the VBVICTS</h1>
+            </div>
+          </div>
+          <p class="lead">Ananda College ICT Society won the 1 st place "Ubiquitous 17" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
         </div>
       </div>
       <div class="row"></div>
