--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <p class="lead">ACICTS won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Samudradevi Balika Vidyalaya</p>
         </div>
         <div class="col-md-4 p-4 animate-in-down mr-auto">
-          <img class="d-block rounded mx-auto" src="assets/img/ubiquitous.webp" width="200" height="200">
+          <img class="d-block rounded mx-auto" src="assets/img/WhatsApp%20Image%202018-05-05%20at%2011.52.47%20PM.jpeg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
               <h1 class="">'Ubiquitous' by the VBVICTS</h1>
