--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
           <img class="d-block mx-auto rounded" src="assets/img/26994143_905172242941161_3813528505529982961_n.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="">'NOESIS' by the ICT society of Nalanda College</h1>
+              <h1 class="">'NOESIS 17' by the ICT society of Nalanda College</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place "NOESIS" which was organized by the ICT society of Nalanda College </p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "NOESIS '17" which was organized by the ICT society of Nalanda College </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down">
           <img class="d-block rounded mx-auto" src="assets/img/XY_KASUN_0103.jpg" width="200" height="200">
@@ -211,7 +211,7 @@
               <h1 class="">'Ubiquitous' by the VBVICTS</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place "Ubiquitous 17" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "Ubiquitous" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
         </div>
       </div>
       <div class="row"></div>
