--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
           <h5 class="text-center shadowed">
             <br>
-            <br>BITS, the intraschool competition series organized by ACICTS has helped youngsters to discover their&nbsp;
+            <br>BITS, the intraschool ICT competition series organized by the ACICTS has helped youngsters to discover their&nbsp;
             <br>hidden talents and ultimately led them&nbsp;
             <br>to achieve many victories.
             <br>
@@ -154,7 +154,7 @@
           </div>
           <h5 class="text-center shadowed">
             <br>
-            <br>We have started this site for acicts younsters to develop and maintain the site so that they can develop their practical skills in many fields like web developing, graphic designing etc. &nbsp;
+            <br>We have started this site for ACICTS younsters to develop and maintain the site so that they can develop their practical skills in many fields like web developing, graphic designing etc. &nbsp;
             <br>
             <br>
             <br> </h5>
@@ -162,17 +162,24 @@
       </div>
     </div>
   </div>
-  <div class="py-5 bg-dark text-center section-fade-in-out" style="background-image: url('assets/img/ac 3.jpg');background-size:cover;background-position:center center;" id="achievements">
+    
+  <div class="py-5 bg-dark text-center section-fade-in-out" style="background-image: url('assets/img/ac 3.jpg');background-size:cover;background-position:center center;" id="achievements" >
     <div class="container">
       <div class="row">
-        <div class="col-md-4 p-4 animate-in-down" >
+        <div class="col-md-12">
+          <h3 class="display-4 text-center border animate-in-down border-info">Achievements</h3>
+          <p class="lead text-center">Ananda College ICT Society has won many achievements in the course of its history. Some of the recent ones are down below.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 p-4 animate-in-down">
           <img class="d-block mx-auto rounded" src="assets/img/26994143_905172242941161_3813528505529982961_n.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="">'NOESIS 17' by the ICT society of Nalanda College</h1>
+              <h1 class="">'NOESIS 17' by the ICT society of Musaeus College</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place in "NOESIS '17" which was organized by the ICT society of Nalanda College </p>
+          <p class="lead">Ananda College ICT Society won the 1 st place "NOESIS" which was organized by the ICT society of Nalanda College </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down">
           <img class="d-block rounded mx-auto" src="assets/img/XY_KASUN_0103.jpg" width="200" height="200">
@@ -192,7 +199,7 @@
             </div>
           </div>
           <p class="lead">
-            Thenuka Thathsara,
+            <br>Thenuka Thathsara,
             <br>&nbsp;a member of the ACICTS won the Gold Award in APICTA which was held in Dhaka </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down ml-auto">
@@ -202,16 +209,16 @@
               <h1 class="">'EFARMOGES 17' by the SBVICTS</h1>
             </div>
           </div>
-          <p class="lead">ACICTS won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Samudradevi Balika Vidyalaya</p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Samudradevi Balika Vidyalaya</p>
         </div>
         <div class="col-md-4 p-4 animate-in-down mr-auto">
           <img class="d-block rounded mx-auto" src="assets/img/WhatsApp%20Image%202018-05-05%20at%2011.52.47%20PM.jpeg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="">'Ubiquitous' by the VBVICTS</h1>
+              <h1 class="">'Ubiquitous 17' by the VBVICTS</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place in "Ubiquitous" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "Ubiquitous 17" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
         </div>
       </div>
       <div class="row"></div>
