--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <h1 class="">'NOESIS 17' by the ICT society of Nalanda College</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place "NOESIS" which was organized by the ICT society of Nalanda College </p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "NOESIS 17" which was organized by the ICT society of Nalanda College </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down">
           <img class="d-block rounded mx-auto" src="assets/img/XY_KASUN_0103.jpg" width="200" height="200">
