--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="display-4 text-center border animate-in-down border-info">Achievements</h3>
-          <p class="lead text-center">Ananda College ICT Society has won many achievements in the course of its history. Some of the recent ones are down below.</p>
+          <p class="lead text-center animate-in-down">Ananda College ICT Society has won many achievements in the course of its history. Some of the recent ones are down below.</p>
         </div>
       </div>
       <div class="row">
@@ -199,7 +199,7 @@
             </div>
           </div>
           <p class="lead">
-            <br>Thenuka Thathsara,
+            <br>Thenuka Sassara,
             <br>&nbsp;a member of the ACICTS won the Gold Award in APICTA which was held in Dhaka </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down ml-auto">
