--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="row">
             <div class="col-md-12">
               <h1>
-                <br>APICTA Gold award&nbsp;</h1>
+                <br>APICTA Gold Award&nbsp;</h1>
             </div>
           </div>
           <p class="lead">
