--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
           </div>
           <p class="lead">
-            <br>Thenuka Sassara,
+            Thenuka Sassara,
             <br>&nbsp;a member of the ACICTS won the Gold Award in APICTA which was held in Dhaka </p>
         </div>
         <div class="col-md-4 p-4 animate-in-down ml-auto">
