--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="container p-4 my-5">
       <div class="row">
         <div class="col-12 col-md-12 animate-in-down shadowed      ">
-          <h3 class="display-4 border animate-in-down border-info" contenteditable="true">Our Vision</h3>
+          <h3 class="display-4 border animate-in-down border-info">Our Vision</h3>
           <p class="lead animate-in-down">
             <b>Our vision is to develop the ICT sector in the school and bring forward the hidden talents of the school students to the national level and afterwards into international level</b>
           </p>
@@ -237,7 +237,7 @@
       <div class="container p-4 my-5">
         <div class="row">
           <div class="col-12 col-md-12 animate-in-down shadowed">
-            <h3 class="display-4 border animate-in-down border-info" contenteditable="true">About Us</h3>
+            <h3 class="display-4 border animate-in-down border-info">About Us</h3>
             <p class="animate-in-down">It was the early 80’s. A time when the term “ICT” was something new to Sri Lankan mind. A group of courageous Anandians stepped up together and formed the “Ananda College Computer Society”. With the advent of time, this society became a pioneer
               in the school computing arena. Time Passed. By the start of the 21st century, the society was nearly abandoned until a group of skillful Anandians with determination took the initiative on reviving the society back to its glory days. Like
               a Phoenix border-top-right-radiussing from the ashes, the society was reborn as the Ananda College Information and Communication Technology Society. Completely rejuvenated; the society started its journey to accomplish the goal of revolutionizing
