--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <h1 class="">'EFARMOGES 17' by the SBVICTS</h1>
             </div>
           </div>
-          <p class="lead">Ananda College ICT Society won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Samudradevi Balika Vidyalaya</p>
+          <p class="lead">Ananda College ICT Society won the 1 st place in "EFARMOGES 17" which was organized by the ICT society of Sirimavo Bandaranaike Vidyalaya</p>
         </div>
         <div class="col-md-4 p-4 animate-in-down mr-auto">
           <img class="d-block rounded mx-auto" src="assets/img/WhatsApp%20Image%202018-05-05%20at%2011.52.47%20PM.jpeg" width="200" height="200">
