--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-12">
-          <h3 class="display-4 border animate-in-down border-info">
+          <h3 class="display-4 border animate-in-down border-info" >
             <b>Our Projects</b>
           </h3>
           <div class="row">
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="row text-left">
-        <div class="p-4 col-lg-4 col-md-3 offset-md-1 animate-in-down">
+        <div class="p-4 col-lg-4 col-md-3 offset-md-1 animate-in-down col-xl-5">
           <div class="card shadowed">
             <div class="card-block text-center card-primary p-2">
               <h2>
@@ -101,11 +101,12 @@
               <br> </div>
             <br> </h5>
         </div>
-        <div class="p-4 col-lg-4 col-md-8 offset-md-2 animate-in-down">
+        <div class="p-4 col-lg-4 col-md-10  animate-in-down col-xl-5 ">
           <div class="card shadowed">
             <div class="card-block text-center card-primary p-2">
               <h2>
-                <br>Live Streaming School Events
+                <br>Live Streaming School&nbsp;
+                <br>Events
                 <br>
                 <br> </h2>
             </div>
@@ -125,11 +126,12 @@
     </div>
     <div class="container my-5">
       <div class="row text-left">
-        <div class="p-4 col-lg-4 col-md-5  offset-md-1 animate-in-left">
+        <div class="p-4 col-lg-4 col-md-5  offset-md-1 animate-in-left col-xl-5">
           <div class="card shadowed">
             <div class="card-block text-center card-primary p-2">
               <h2>
-                <br>Intraschool Competitions
+                <br>Intraschool&nbsp;
+                <br>Competitions
                 <br>
                 <br> </h2>
             </div>
@@ -143,16 +145,18 @@
             <br>
             <br> </h5>
         </div>
-        <div class="p-4 col-lg-4 col-md-4  offset-md-2 animate-in-right">
+        <div class="p-4 col-lg-4 col-md-6   animate-in-right col-xl-5">
           <div class="card shadowed">
             <div class="card-block text-center card-primary p-2">
               <h2>
-                <br>ACICTS Juniors Website&nbsp;
+                <br>ACICTS Juniors
+                <br>&nbsp;Website&nbsp;
                 <br>
                 <br> </h2>
             </div>
           </div>
           <h5 class="text-center shadowed">
+            <br>
             <br>
             <br>We have started this site for ACICTS younsters to develop and maintain the site so that they can develop their practical skills in many fields like web developing, graphic designing etc. &nbsp;
             <br>
@@ -162,7 +166,6 @@
       </div>
     </div>
   </div>
-    
   <div class="py-5 bg-dark text-center section-fade-in-out" style="background-image: url('assets/img/ac 3.jpg');background-size:cover;background-position:center center;" id="achievements" >
     <div class="container">
       <div class="row">
