--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <p class="lead">+94 71 916 7927
             <br>+94 77 238 0304</p>
           <h3 class="text-info">E-mail</h3>
-          <p class="lead">acicts18@gmail.com</p>
+          <p class="lead">contact@acicts.io</p>
         </div>
         <div class="my-3 col-lg-4">
           <h3 class="text-info">Follow Us</h3>
