--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
           </div>
           <p class="lead">Ananda College ICT Society won the 1 st place in "Ubiquitous 17" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
         </div>
+        <div class="col-md-4 p-4 animate-in-down mr-auto">
+          <img class="d-block mx-auto rounded" src="assets/img/tempuz.jpeg" width="200" height="200">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="">'Tempuz 18' by Thurstan College ICT Society</h1>
+            </div>
+          </div>
+          <p class="lead" >ACICTS won the 1 st place in "Tempuz 18" which was organized by the ICT society of Thurstan College</p>
+        </div>
       </div>
       <div class="row"></div>
     </div>
