--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@
           <p class="lead" >ACICTS won the 1 st place in "Tempuz 18" which was organized by the ICT society of Thurstan College</p>
         </div>
         <div class="col-md-4 p-4 animate-in-down">
+          <img class="d-block mx-auto rounded" src="assets/img/nssc.jpg" width="200" height="200">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="">NSSC 2017 1st place and 3rd place</h1>
+            </div>
+          </div>
+          <p class="lead">Ashan Hansaka and Nadun Yashmika was able to win the 1st place and 3rd place (respectively) at National School Software Competition 2017</p>
+        </div>
+        <div class="col-md-4 p-4 animate-in-down">
           <img class="d-block mx-auto rounded" src="assets/img/26994143_905172242941161_3813528505529982961_n.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
@@ -197,8 +206,7 @@
           <img class="d-block rounded mx-auto" src="assets/img/SquareFit_20180505_08281877.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12">
-              <h1>
-                <br>APICTA Gold Award&nbsp;</h1>
+              <h1>APICTA Gold Award&nbsp;</h1>
             </div>
           </div>
           <p class="lead">
@@ -223,7 +231,7 @@
           </div>
           <p class="lead">Ananda College ICT Society won the 1 st place in "Ubiquitous 17" which was organized by the ICT society of Viharamahadevi Balika Vidyalaya</p>
         </div>
-        <div class="col-md-4 p-4 animate-in-down mr-auto">
+        <div class="col-md-4 p-4 animate-in-down mx-auto">
           <img class="d-block rounded mx-auto" src="assets/img/XY_KASUN_0103.jpg" width="200" height="200">
           <div class="row">
             <div class="col-md-12 text-center">
